terraria/terraria-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: terraria
  name: terraria
