terraria/terraria-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keel
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`terraria.10.0.0.25.xip.io`)
      kind: Rule
      services:
        - name: terraria
          port: 7777
          namespace: default
